--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,15 +1,33 @@
 <% content_for :cabecalho do %>
-Listagem de Produtos
+  Listagem de Produtos
 <% end  %>
 
 <% unless @produtos.blank? %>
 
-<ul>
-  <% @produtos.each do |produto| %>
-  <li> <%= produto.nome %></li>
-  <% end %>
-</ul>
+  <table>
+    <thead>
+      <tr>
+        <th> Nome </th>
+        <th> Preço </th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @produtos.each do |produto| %>
+        <tr>
+          <td><%= produto.nome %></td>
+          <td><%= number_to_currency produto.preco %></td>
+          <td>
+            <% form_tag itens_path, :method => :post do %>
+              <%= hidden_field_tag( :produto_id, produto.id )%>
+              <%= text_field_tag( :quantidade, 1) %>
+              <%= submit_tag "Adicionar"%>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
 <% else %>
-<p> N&atilde;o h&acute; produtos no sistema. </p>
+  <p> N&atilde;o h&acute; produtos no sistema. </p>
 <% end %>
