--- a/app/views/itens/index.html.erb
+++ b/app/views/itens/index.html.erb
@@ -1,33 +1,36 @@
 <% content_for :cabecalho do %>
- Meu carrinho
+  Meu carrinho
 <% end %>
 
+<% form_tag atualizar_pedido_itens_path, :method => :post do %>
 
- <table border="1">
-   <thead>
-     <tr>
-   <td> Nome </td>
-   <td> Quantidade </td>
-   <td> Preço unitário </td>
-   <td> Preço Total </td>
-     </tr>
-   </thead>
-   <tbody>
-     <% pedido_atual.itens.each do |item| %>
-     <tr>
-       <td>
-         <%= item.produto.nome %>
-       </td>
-       <td>
-         <%= item.quantidade %>
-       </td>
-       <td>
-         <%= number_to_currency item.produto.preco %>
-       </td>
-       <td>
-         <%= number_to_currency item.preco_total %>
-       </td>
+  <table border="1">
+    <thead>
+      <tr>
+        <td> Nome </td>
+        <td> Quantidade </td>
+        <td> Preço unitário </td>
+        <td> Preço Total </td>
       </tr>
-     <% end %>
-   </tbody>
-   </table>
+    </thead>
+    <tbody>
+      <% pedido_atual.itens.each do |item| %>
+        <%=
+        # Procura _item ("item") dentro da pasta onde o arquivo foi definido
+        #O objeto itens recebe os valores contidos na variável item
+        render "item", :item => item %>
+      <% end %>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td colspan="2"></td>
+        <td>Preço Total:</td>
+        <td> <%= number_to_currency pedido_atual.preco_total %> </td>
+      </tr>
+
+    </tfoot>
+  </table>
+
+  <%= submit_tag "Atualizar" %>
+
+<% end  %>
