--- a/app/views/layouts/administracao.html.erb
+++ b/app/views/layouts/administracao.html.erb
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title> Loja  - <%= @titulo %></title>
+    <%= stylesheet_link_tag "erros", "outro" %>
     <%=  yield :stylesheets %>
   </head>
   <body>
