--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<!-- Que é Remo? Como funciona? -->
 <html>
   <head>
     <title> Loja  - <%= @titulo %></title>
@@ -9,17 +10,7 @@
 
    <%= render_flash  %>
     
-    <ul>
-      <li><%= 
-      #Em link_to pode-se passar um hashe contendo atributos que seriam passados para a âncora no html
-      link_to( "Produto", produtos_path ) %>
-      </li>
-      <% unless pedido_atual.blank? %>
-        <li>
-          <%= link_to( "Veja o seu carrinho", itens_path ) %>
-        </li>
-      </ul>
-    <%  end %>
+   <%= render "compartilhados/cabecalho" %>
 
     <%= #conteudo dos outros controlers
     yield  %>
