--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,12 @@
   <head>
     <title> Loja  - <%= @titulo %></title>
     <%=  yield :stylesheets %>
+    <%= javascript_include_tag "jquery",
+    "jquery-ui",
+    "jquery-form",
+    "jrails",
+    "application" %>
+
   </head>
   <body>
 
