--- a/app/views/compartilhados/_logado.html.erb
+++ b/app/views/compartilhados/_logado.html.erb
@@ -1,5 +1,6 @@
 <% if logado? %>
-<p> Olá <%= usuario_atual.nome %></p>
+<p> Olá <%= usuario_atual.nome
+%></p>
 <p> <%= link_to( "Logoff",
   sessao_path,
   :method => :delete,
