--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -2,6 +2,12 @@
   Listagem de Produtos
 <% end  %>
 
+  <% form_tag produtos_path, :method => :get do %>
+  Digite sua busca:
+  <%= text_field_tag :q , params[:q]%>
+  <%= submit_tag "Buscar" %>
+  <% end %>
+
 <% unless @produtos.blank? %>
 
   <table>
@@ -29,6 +35,7 @@
               <%= image_tag "ajax-loader.gif", :id => dom_id(produto, :loading),
               :style => "display:none" %>
             <% end %>
+            | <%= link_to("visualizar", produto_path( produto ) ) %>
           </td>
         </tr>
       <% end %>
